--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
         </div>
       </div>
       <div class="game-board">
-        <table>
-          <tr>
-            <td class="cell"></td>
-            <td class="cell"></td>
-            <td class="cell"></td>
-          </tr>
-          <tr>
-            <td class="cell"></td>
-            <td class="cell"></td>
-            <td class="cell"></td>
-          </tr>
-          <tr>
-            <td class="cell"></td>
-            <td class="cell"></td>
-            <td class="cell"></td>
-          </tr>
-        </table>
+        <div id="table">
+          <div>
+            <div data-num="1" class="cell"></div>
+            <div data-num="2" class="cell"></div>
+            <div data-num="3" class="cell"></div>
+          </div>
+          <div>
+            <div data-num="4" class="cell"></div>
+            <div data-num="5" class="cell"></div>
+            <div data-num="6" class="cell"></div>
+          </div>
+          <div>
+            <div data-num="7" class="cell"></div>
+            <div data-num="8" class="cell"></div>
+            <div data-num="9" class="cell"></div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="app.js"></script>
